update stepper selector, add unit tests

--- a/config/examples/mmu_stepper_idler_example.cfg
+++ b/config/examples/mmu_stepper_idler_example.cfg
@@ -129,6 +129,7 @@ cad_selector_tolerance: 10.0     # Safety margin for movement
 cad_idler_gate0_pos: 5.0         # Idler position for gate 0 (mm)
 cad_idler_gate_width: 21.0       # Distance between idler positions (mm)
 cad_idler_tolerance: 10.0        # Safety margin
+cad_idler_home_position: 85.0    # UP position - no bearing in contact with any gate
 
 
 # ====================================================================
